--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -1,16 +1,16 @@
-name: miui_VIOLET_20.11.17_Q
+name: miuicc9e_21.2.2_10
 
 on:
   watch:
-    types: [started]
+    types: [started]87a1_10.0.zip
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/20.11.17/miui_VIOLET_20.11.17_5ab70187a1_10.0.zip
+  ROM_URL: https://119-188-133-2.ksyungslb.com/bigota.d.miui.com/21.2.2/miui_LAURUS_21.2.2_bdf7ad0ddd_10.0.zip?ksy_gslb_referer=https%3A%2F%2Fgithub.com%2FmooseIre%2Fupdate_miui_ota%2Fblob%2Fmaster%2FDevelop%2F%25E5%25B0%258F%25E7%25B1%25B3CC%25209e.md
   ROM_NAME: MIUI
-  BUILD_AB: false
-  BUILD_AONLY: true
+  BUILD_AB: true
+  BUILD_AONLY: false
   ROM_AONLY: VIOLET_20.11.17_aonly-Q.7z
-  ROM_AB: K20P_AB_20.7.16-eu.7z
+  ROM_AB: miuicc9e_21.2.2_10.7z
 
 jobs:
   build:
